--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="Panel-1">
         <div class="right">
             <h1>This website is awesome</h1>
-        <p>I do the bare minimum, but my work would be of great quality</p>
+        <p>I do the bare minimum, but my work is of great quality</p>
         <button type="button">Sign Up</button>
         </div>
 
